fix: Adjusted the CSS on the About and Prompt Details pages as they were too close to the navigation

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,6 @@ a {
 }
 
 main {
-  margin-top: 50px;
   margin-bottom: 100px;
 }
 
